# daily_stock_analysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: uv-ci.yml.example
apps/dsa-web/: THEME_ADAPTATION.md  THEME_CHECKLIST.md  THEME_SUMMARY.md  package-lock.json
apps/dsa-web/src/: index.css
docs/: CLEANUP_REPORT.md  MIGRATION_COMPLETE.md  UV_MIGRATION.md  UV_MIGRATION_SUMMARY.md
src/: __init__.py
src/daily_stock_analysis/: analysis_context_pack_overview.py  analyzer.py  auth.py  config.py  daily_market_context_guardrail.py  feishu_doc.py  market_analyzer.py  market_phase_summary.py  md2img.py  notification.py  phase_decision_guardrail.py  search_service.py  stock_analyzer.py  storage.py  webui_frontend.py
src/daily_stock_analysis/agent/: __init__.py  chat_context.py  conversation.py  events.py  executor.py  factory.py  llm_adapter.py  memory.py  orchestrator.py  provider_trace.py  research.py  runner.py  stock_scope.py
src/daily_stock_analysis/api/: app.py  deps.py
src/daily_stock_analysis/bot/: __init__.py  dispatcher.py  handler.py
src/daily_stock_analysis/core/: config_registry.py  market_review.py  market_review_lock.py  market_review_runtime.py  pipeline.py  trading_calendar.py
src/daily_stock_analysis/data/: __init__.py  stock_index_loader.py
src/daily_stock_analysis/data_provider/: akshare_fetcher.py  alphavantage_fetcher.py  base.py  efinance_fetcher.py  finnhub_fetcher.py  longbridge_fetcher.py  tushare_fetcher.py  yfinance_fetcher.py
src/daily_stock_analysis/llm/: errors.py
src/daily_stock_analysis/notification_sender/: astrbot_sender.py  custom_webhook_sender.py  discord_sender.py  email_sender.py  feishu_sender.py  gotify_sender.py  ntfy_sender.py  pushover_sender.py  pushplus_sender.py  serverchan3_sender.py  slack_sender.py  telegram_sender.py  wechat_sender.py
src/daily_stock_analysis/repositories/: __init__.py  alert_repo.py  analysis_repo.py  backtest_repo.py  decision_signal_repo.py  portfolio_repo.py  stock_repo.py
src/daily_stock_analysis/schemas/: __init__.py  analysis_context_pack.py  decision_action.py
src/daily_stock_analysis/services/: __init__.py  agent_model_service.py  alert_service.py  alert_worker.py  alphasift_service.py  analysis_context_builder.py  analysis_service.py  analyzer_service.py  backtest_service.py  daily_market_context.py  decision_signal_extractor.py  decision_signal_service.py  history_comparison_service.py  history_loader.py  history_service.py  image_stock_extractor.py  import_parser.py  market_light_alerts.py  market_light_service.py  name_to_code_resolver.py  (+13 more)
tests/: longbridge_live_smoke.py  test_a_share_fetcher_code_conversion.py  test_agent_chat_api.py  test_agent_executor.py  test_agent_frozen_context.py  test_agent_models_api.py  test_agent_orchestrator_sniper_fallback.py  test_agent_pipeline.py  test_agent_registry.py  test_akshare_history_timeout.py  test_akshare_realtime_logging.py  test_alert_api.py  test_alert_worker.py  test_alphasift_api.py  test_alphavantage_fetcher.py  test_analysis_api_contract.py  test_analysis_context_builder.py  test_analysis_context_pack_overview.py  test_analysis_context_pack_prompt.py  test_analysis_context_pack_schema.py  test_analysis_history.py  test_analysis_integration.py  test_analysis_metadata.py  test_analyzer_news_prompt.py  test_anspire_search.py  test_api_app_cors.py  test_api_error_helpers.py  test_api_health.py  test_api_schema_pydantic.py  test_ask_command.py  test_auth_api.py  test_auth_status_setup_state.py  test_autocomplete_pr0.py  test_backtest_engine.py  test_backtest_service.py  test_backtest_summary.py  test_belong_boards_run_flow.py  test_bot_dispatcher_async.py  test_bot_market_command.py  test_bot_status_command.py  (+131 more)
(+73 files in other folders)
