[project]
name = "daily-stock-analysis"
version = "0.1.0"
description = "Daily Stock Analysis - AI-powered stock market analysis and monitoring system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "wexuo" }
]
keywords = ["stock", "analysis", "ai", "trading", "market"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "sqlalchemy>=2.0.0",
    "schedule>=1.2.0",
    "exchange-calendars>=4.13.0",
    "efinance>=0.5.5",
    "akshare>=1.12.0",
    "tushare>=1.4.0",
    "pytdx>=1.72",
    "baostock>=0.8.0",
    "yfinance>=0.2.0",
    "longbridge>=0.2.77",
    "tickflow>=0.1.0",
    "alphasift @ git+https://github.com/ZhuLinsen/alphasift.git@14e74fc0819267f7c04c3117a0dd0fe3f9b19404",
    "lark-oapi>=1.0.0",
    "pandas>=2.0.0",
    "pypinyin>=0.50.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    "json-repair>=0.55.1",
    "litellm>=1.80.10,!=1.82.7,!=1.82.8,<2.0.0",
    "tiktoken>=0.8.0,<0.12.0",
    "openai>=1.0.0",
    "PyYAML>=6.0",
    "tavily-python>=0.3.0",
    "google-search-results>=2.4.0",
    "requests>=2.31.0",
    "markdown2>=2.4.0",
    "imgkit>=1.2.0",
    "fake-useragent>=1.4.0",
    "httpx[socks]",
    "dingtalk-stream>=0.24.3",
    "discord.py>=2.0.0",
    "PyNaCl>=1.5.0",
    "newspaper3k>=0.2.8",
    "lxml_html_clean",
    "jinja2>=3.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
daily-stock = "daily_stock_analysis.main:main"
stock-server = "daily_stock_analysis.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daily_stock_analysis = ["**/*.py"]

[tool.uv]
link-mode = "copy"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", ".env", "venv", ".venv"]
known_first_party = ["daily_stock_analysis", "api", "bot", "data_provider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
norecursedirs = [
    ".git",
    "__pycache__",
    ".env",
    "venv",
    ".venv",
    ".venv*",
    "build",
    "dist",
    "local",
    "node_modules",
    "*/node_modules/*",
]
markers = [
    "unit: fast offline unit tests",
    "integration: service-level integration tests without external network dependency",
    "network: tests requiring external network or third-party services",
]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".env",
    "venv",
    ".venv",
    ".venv*",
    "build",
    "dist",
    "local",
    "node_modules",
    "*/node_modules/*",
    "*.egg-info",
]
ignore = ["E501", "W503", "E203", "E402"]